--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ahmad Mustafa"
+title                    : "Ahmad Mustafa's Homepage"
 title_separator          : "-"
-name                     : &name "Dr. Ahmad Mustafa"
-description              : &description "Assistant Professor at Jordan University of Science and Technology"
+name                     : &name "Ahmad Mustafa"
+description              : &description "Assistant Professor at Jordan University of Science and Technology  || Machine Learning"
 url                      : https://a-mustafa.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "a-mustafa.github.io"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Dr. Ahmad Mustafa"
+  name             : "Ahmad Mustafa"
   avatar           : "profile.png"
   bio              : "Assistant Professor at Jordan University of Science and Technology"
   location         : "Jordan"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/a-mustafa"
+  github           : "a-mustafa"
   google_plus      :
   keybase          :
   instagram        :
