--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ahmad Mustafa"
-  avatar           : "profile.png"
+  avatar           : "profile_AM.gif"
   bio              : "Assistant Professor at Jordan University of Science and Technology"
   location         : "Jordan"
   employer         :
